[package]
name = "single-trait-impl"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A macro for declaring and implementing a trait at the same time."
repository = "https://github.com/M1cha/single-trait-impl"
readme = "README.md"
keywords = ["macro", "trait"]

[lib]
proc-macro = true

[dependencies]
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
